terraform/DB/secgroup.tf
resource "aws_security_group" "allow_db_ssh" {
  name        = "allow-db-ssh"
  description = "Allow SSH inbound traffic"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "allow_db" {
  name        = "allow-db"
  description = "Allow DB internal only"

  egress {
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
